syntax = "proto3";

package notification;

service SmsService {
  rpc SendSms (SendSmsRequest) returns (SendSmsResponse);
  rpc GetDeliveryReport (DeliveryReportRequest) returns (DeliveryReportResponse);
}

message SendSmsRequest {
  string msisdn = 1;
  string text = 2;
  string senderId = 3;
  string name = 4;
  string from = 5;
  string status = 6;
  string list = 7;
  string schedule = 8;
  string channel = 9;
}

message SendSmsResponse {
  string message = 1;
}

message DeliveryReportRequest {
  string username = 1;
  string password = 2;
  string messageId = 3;
}

message DeliveryReportResponse {
  string status = 1;
  string timeSubmitted = 2;
  string timeDelivered = 3;
  string message = 4;
  string sender = 5;
  string messageId = 6;
}
